# AI-skills

./: .gitignore  ACTION.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FEATURES_AND_IDEAS.md  HUB_DISCOVERY_STATUS.md  IMPROVEMENTS.md  OVERVIEW.md  README.md  WEB_PUBLISHING_STATUS.md  _seed_error.txt  _test_api.py  ai_skills_hub_spec.docx  analyze.md  idea.md  out1.json  out2.json  out3.json  out4.json  pyproject.toml  railway.json  registry.db  render.yaml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  new_skill.md
.github/workflows/: ci.yml
docs/: COMPARISON.md  LAUNCH_POST.md  SECURITY.md  SPEC.md
examples/calculate-reading-time/: skill.yaml
examples/classify-sentiment/: skill.yaml
examples/code-review/: skill.yaml
examples/detect-language/: skill.yaml
examples/extract-email-data/: skill.yaml
examples/extract-invoice/: skill.yaml
examples/generate-commit-message/: skill.yaml
examples/generate-sql/: skill.yaml
examples/json-to-csv/: skill.yaml
examples/markdown-to-html/: langchain_tool.py  skill.yaml
examples/review-and-fix-code/: skill.yaml
examples/spell-check/: skill.yaml
examples/summarize-document/: skill.yaml
examples/summarize-to-tweet/: skill.yaml
examples/translate-and-summarize/: skill.yaml
examples/translate-text/: skill.yaml
examples/weather-lookup/: skill.yaml
examples/web-search/: skill.yaml
examples/word-frequency/: skill.yaml
registry/: README.md  index.json
registry/api/: .env.example  README.md  categories.py  config.py  database.py  main.py  models.py  requirements.txt  schemas.py  seed.py  utils.py
registry/frontend/: README.md  build_log.txt  build_log_2.txt  build_log_4.txt  package-lock.json  (+2 more)
sdk/: __init__.py  auth_config.py  cli.py  runner.py  security.py  validator.py
test-skill/: skill.yaml
tests/: test_api.py
(+43 files in other folders)
